<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.americanfootballcounter.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/stylesBlue"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/teamA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/edgeTop"
                        android:text="@string/team"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/teamA2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/general16"
                        android:text="@string/A"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/edgeLeft"
                            android:layout_weight="1"
                            android:onClick="decreaseIndexTeamA"
                            android:text="@string/decreaseIndex" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/buttonRight"
                            android:layout_weight="1"
                            android:onClick="increaseIndexTeamA"
                            android:text="@string/increaseIndex" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/score_teamA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/general16"
                        android:text="@string/score_at_start"
                        android:textSize="34sp" />

                    <Button
                        android:id="@+id/touchdown_teamA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/edgeLeft"
                        android:layout_marginRight="@dimen/buttonRight"
                        android:onClick="touchdownTeamA"
                        android:text="@string/touchdown" />

                    <Button
                        android:id="@+id/fieldgoal_teamA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/edgeLeft"
                        android:layout_marginRight="@dimen/buttonRight"
                        android:layout_marginTop="@dimen/interButton"
                        android:onClick="fieldgoalTeamA"
                        android:text="@string/fieldgoal" />

                    <Button
                        android:id="@+id/safety_teamA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/edgeLeft"
                        android:layout_marginRight="@dimen/buttonRight"
                        android:layout_marginTop="@dimen/interButton"
                        android:onClick="safetyTeamA"
                        android:text="@string/safety" />

                    <Button
                        android:id="@+id/pat_teamA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/edgeLeft"
                        android:layout_marginRight="@dimen/buttonRight"
                        android:layout_marginTop="@dimen/interButton"
                        android:onClick="patTeamA"
                        android:text="@string/pat" />

                    <Button
                        android:id="@+id/tpc_teamA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/edgeLeft"
                        android:layout_marginRight="@dimen/buttonRight"
                        android:layout_marginTop="@dimen/interButton"
                        android:onClick="tpcTeamA"
                        android:text="@string/tpc" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/general8"
                    android:background="@color/lineGray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/teamB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/edgeTop"
                        android:text="@string/team"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/teamB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/general16"
                        android:text="@string/B"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/buttonLeft"
                            android:layout_weight="1"
                            android:onClick="decreaseIndexTeamB"
                            android:text="@string/decreaseIndex" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/edgeRight"
                            android:layout_weight="1"
                            android:onClick="increaseIndexTeamB"
                            android:text="@string/increaseIndex" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/score_teamB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/general16"
                        android:text="@string/score_at_start"
                        android:textSize="34sp" />

                    <Button
                        android:id="@+id/touchdown_teamB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/buttonLeft"
                        android:layout_marginRight="@dimen/edgeRight"
                        android:onClick="touchdownTeamB"
                        android:text="@string/touchdown" />

                    <Button
                        android:id="@+id/fieldgoal_teamB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/buttonLeft"
                        android:layout_marginRight="@dimen/edgeRight"
                        android:layout_marginTop="@dimen/interButton"
                        android:onClick="fieldgoalTeamB"
                        android:text="@string/fieldgoal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/buttonLeft"
                        android:layout_marginRight="@dimen/edgeRight"
                        android:layout_marginTop="@dimen/interButton"
                        android:onClick="safetyTeamB"
                        android:text="@string/safety" />

                    <Button
                        android:id="@+id/pat_teamB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/buttonLeft"
                        android:layout_marginRight="@dimen/edgeRight"
                        android:layout_marginTop="@dimen/interButton"
                        android:onClick="patTeamB"
                        android:text="@string/pat" />

                    <Button
                        android:id="@+id/tpc_teamB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/buttonLeft"
                        android:layout_marginRight="@dimen/edgeRight"
                        android:layout_marginTop="@dimen/interButton"
                        android:onClick="tpcTeamB"
                        android:text="@string/tpc" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/Reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/general16"
                android:layout_marginBottom="@dimen/edgeBottom"
                android:onClick="reset"
                android:text="@string/reset" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>

